# mcp

./: .mcp.json  CLAUDE.md  CLAUDE_CODE_SETUP.md  Containerfile.router  END_TO_END_TEST_RESULTS.md  INSTALLATION_IMPROVEMENTS.md  Makefile  README.md  install-to-claude.sh  n8n_mcp_proxy.py  n8n_mcp_proxy_enhanced.py  pyproject.toml  uninstall-from-claude.sh
config/: backends.yaml  backends.yaml.example
src/mcp_server/: __init__.py  __main__.py  config.py  server.py
src/mcp_server/application/: __init__.py
src/mcp_server/application/dtos/: __init__.py  backend_registration.py  tool_call.py
src/mcp_server/application/ports/: __init__.py  mcp_client_port.py  port_allocator_port.py  process_manager_port.py
src/mcp_server/application/use_cases/: __init__.py  check_backend_health.py  discover_capabilities.py  monitor_backend_processes.py  register_backend.py  reload_backends_config.py  route_tool_call.py  unregister_backend.py
src/mcp_server/domain/: __init__.py  exceptions.py
src/mcp_server/domain/entities/: __init__.py  backend.py
src/mcp_server/domain/repositories/: __init__.py  backend_repository.py  config_repository.py
src/mcp_server/domain/services/: __init__.py  health_policy.py  namespace_generator.py  routing_strategies.py
src/mcp_server/infrastructure/: __init__.py
src/mcp_server/presentation/: __init__.py  composition_root.py  server_factory.py
src/mcp_server/routing/: __init__.py  backends.py  client.py  config_loader.py  engine.py  exceptions.py  health.py  models.py
src/mcp_server/tools/: __init__.py
tests/: conftest.py  test_tools.py
tests/fixtures/: test_backends.yaml
tests/test_routing/: __init__.py  test_client.py  test_config_loader.py  test_engine.py  test_health.py  test_models.py
(+20 files in other folders)
