[project]
name = "mcp-router"
version = "0.1.0"
description = "MCP router for aggregating multiple MCP backend servers"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "router", "fastmcp"]
authors = [
    {name = "Michael", email = "michael@example.com"}
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/amp-rh/mcp"
Repository = "https://github.com/amp-rh/mcp"
Documentation = "https://github.com/amp-rh/mcp#readme"
Issues = "https://github.com/amp-rh/mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"
mcp-router = "mcp_server.server:main_router"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mcp_server"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

